--- a/README.pod
+++ b/README.pod
@@ -384,6 +384,6 @@ C<static inline>.
 
 =head1 AUTHOR AND COPYRIGHT
 
-Copyright (C) 2012, 2013 M. Nunberg.
+Copyright (C) 2012-2015 M. Nunberg.
 
 See C<LICENSE> for license information.
