--- a/README.pod
+++ b/README.pod
@@ -393,6 +393,6 @@ C<static inline>.
 
 =head1 AUTHOR AND COPYRIGHT
 
-Copyright (C) 2012-2015 M. Nunberg.
+Copyright (C) 2012-2017 Mark Nunberg.
 
 See C<LICENSE> for license information.
